<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/window_background_texture" >

    <RelativeLayout
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bg"
        android:paddingLeft="15dp"
        android:paddingRight="20dp" >

        <ImageView
            android:id="@+id/login_title_iv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_left_arrow_in_dealmap" />

        <TextView
            android:id="@+id/login_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/login_loginBtn"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_black" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_rel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:padding="15dp" >

        <EditText
            android:id="@+id/login_et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="输入用户名"
            android:inputType="textEmailAddress"
            android:paddingLeft="50dp" >

        </EditText>

        <EditText
            android:id="@+id/login_et_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_et_name"
            android:ems="10"
            android:hint="输入密码"
            android:inputType="textPassword"
            android:paddingLeft="50dp" />

        <TextView
            android:id="@+id/login_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/login_et_name"
            android:layout_alignBottom="@+id/login_et_name"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:text="@string/login_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/login_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/login_et_pwd"
            android:layout_alignBottom="@+id/login_et_pwd"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:text="@string/login_pwd"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login_et_pwd"
            android:layout_alignRight="@+id/login_et_pwd"
            android:layout_below="@+id/login_et_pwd"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/login_logBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/exit_btn_selector"
                android:padding="10dp"
                android:text="@string/login_loginBtn"
                android:textColor="@color/color_list_tab_txt" />

            <Button
                android:id="@+id/login_regBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/exit_btn_selector"
                android:padding="10dp"
                android:text="快速注册"
                android:textColor="@color/color_list_tab_txt" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>