<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/window_background_texture"
    android:clickable="true" >

    <RelativeLayout
        android:id="@+id/detail_info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bg"
        android:paddingLeft="15dp"
        android:paddingRight="20dp" >

        <ImageView
            android:id="@+id/detail_info_title_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_left_arrow_in_dealmap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/detail_info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_black" />

        <TextView
            android:id="@+id/detail_info_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/exit_btn_selector"
            android:gravity="center"
            android:padding="10dp"
            android:text="注销"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/child_title_white" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_info_title"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_info_title"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_bg12"
                android:padding="20dp" >

                <ImageView
                    android:id="@+id/detail_info_ivhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_avatar_default" />

                <EditText
                    android:id="@+id/detail_info_et_loginname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/detail_info_ivhead"
                    android:background="@null"
                    android:editable="false"
                    android:ems="5"
                    android:enabled="false" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/item_bg12"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/detail_info_tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/detail_info_et_name"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:text="@string/name"
                    android:textColor="@color/text_black" />

                <EditText
                    android:id="@+id/detail_info_et_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/detail_info_tv_name"
                    android:background="@null"
                    android:editable="false"
                    android:ems="8"
                    android:enabled="false" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/item_bg12"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/detail_info_tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:text="@string/phone"
                    android:textColor="@color/text_black" />

                <EditText
                    android:id="@+id/detail_info_et_phonenum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/detail_info_tv_phone"
                    android:background="@null"
                    android:editable="false"
                    android:ems="8"
                    android:enabled="false" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/item_bg12"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/detail_checkin_tv_dis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:text="@string/sex"
                    android:textColor="@color/text_black" />

                <TextView
                    android:id="@+id/detail_info_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:padding="5dp" >

        <Button
            android:id="@+id/detail_info_btn_modify"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/exit_btn_selector"
            android:padding="10dp"
            android:text="修改"
            android:textColor="@color/color_list_tab_txt" />

        <Button
            android:id="@+id/detail_info_backbtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/exit_btn_selector"
            android:padding="10dp"
            android:text="返回"
            android:textColor="@color/color_list_tab_txt" />
    </LinearLayout>

</RelativeLayout>